# OmniPlayr-plugin-SDK

./: .gitignore  README.md
.github/workflows/: publish-backend.yml  publish-frontend.yml
backend/: README.md  pyproject.toml
backend/src/omniplayr/: __init__.py
backend/src/omniplayr/plugins/: __init__.py  _runtime.py  account.py  admin.py  api.py  backend_config.py  config.py  db.py  diagnostics.py  functions.py  health.py  installer.py  logging.py  notifications.py  passwords.py  runtime.py  server.py  updater.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/src/: account.ts  api.ts  components.ts  config.ts  host.ts  index.ts  navigation.ts  notifications.ts  player.ts  plugins.ts  popups.ts  responsive.ts  translations.ts  types.ts
